--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
   padding: 2rem;
   font-weight: bold;
   font-size: 1.2rem;
-  color: white;
+  color: #ffffff;
 }
 .headings{
   color: rgb(139, 130, 0);
