--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,11 @@ code {
 }
 .navbar-links .nav-header{
   text-align: center;
-  text-decoration: none;
+  text-decoration:navajowhite;
   padding: 2rem;
   font-weight: bold;
-  font-size: 1.2rem;
-  color: #ffffff;
+  font-size: 1.8rem;
+  color: hsl(0, 88%, 60%);
 }
 .headings{
   color: rgb(139, 130, 0);
